--- a/sharinpix/src/classes/EinsteinVisionProjectAlbumCtrl.cls
+++ b/sharinpix/src/classes/EinsteinVisionProjectAlbumCtrl.cls
@@ -40,6 +40,10 @@ public with sharing class EinsteinVisionProjectAlbumCtrl {
                     'Display' => new map<string, object>{
                         'tags'=> true
                     }
+                },
+                'Sort' => new map<string, object>{
+                    'field'=> 'created_at',
+                    'order'=> 'desc'
                 }
             }
         };
