--- a/demo-attachment/src/classes/SharinPixDemoAttachmentUpload.cls
+++ b/demo-attachment/src/classes/SharinPixDemoAttachmentUpload.cls
@@ -13,9 +13,9 @@ public class SharinPixDemoAttachmentUpload {
 
     @future (callout=true)
     public static void upload_photo(Id attachmentId, string caseId){
-        SharinPix.Utils utilsInstance = new SharinPix.Utils();
-        if (utilsInstance!=null){
-            utilsInstance.uploadAttachment(attachmentId, caseId);
+        SharinPix.Utils utils = new SharinPix.Utils();
+        if (utils!=null){
+            utils.uploadAttachment(attachmentId, caseId);
         }
         else {
             system.debug('### Error occurred');
